--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
       <button id="btnHeader" mat-icon-button class="btn btn-menu" color="white" matTooltip="Menu" [disabled]="!estaLogeado" (click)="toggleSideBar()">
         <mat-icon>menu</mat-icon>
       </button>
-      <a class="ml-2">
+      <a class="ml-2" href="/">
         <img class="header-logo" [src]="logoUrl ? logoUrl : '../../../assets/imgs/logo-header.png'" alt="logo-caja"/>
       </a>
     </div>
