--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -196,7 +196,7 @@
               <div class="d-flex align-items-center col-4 justify-content-center">
                 <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
                 <input type="text" disabled class="form-control form-control-sm mx-2 text-center quantity-input" value="{{producto.cantidadSeleccionada}}">
-                <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
+                <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)" [disabled]="producto.cantidadSeleccionada == producto.cantidadEnStock">+</button>
               </div>
               <div class="text-end col-4">
                 <span class="m-0 costo"><b>$ {{ producto.precioConIVA * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
