--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -231,3 +231,8 @@
   color: #777777;
   margin-top: 10px;
 }
+
+.producto-sin-stock {
+  opacity: 0.5;
+  pointer-events: none; /* Desactiva la interacción del usuario */
+}
