configuracio se aniade la facturacion autmatica

--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -124,6 +124,16 @@
       </div>
 
       <br><br>
+
+      <h4 style="color: grey">Facturación de ventas</h4>
+      <div class="row">
+        <mat-checkbox [formControl]="facturacionAutomatica">Facturación automática</mat-checkbox>
+      </div>
+      <div class="row">
+        <h5 style="margin-left: 10px">Esto significa que la facturación en AFIP de cada venta se realizará de manera automática después de realizarse.</h5>
+      </div>
+
+      <br><br>
       <h4 style="color: grey">Información Adicional</h4>
 
       <!-- Usuario de Instagram y Contraseña de Instagram -->
