--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.scss
@@ -22,3 +22,19 @@
 h3 {
   color: #5e5e5e;
 }
+
+.precio-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.precio-tachado {
+  text-decoration: line-through;
+  color: gray;
+  font-size: 12px;
+}
+
+.precio-promocion {
+  display: block;
+  margin-top: 5px;
+}
