--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -1,4 +1,4 @@
-<div class="container py-3 col-xl-11">
+<div class="container py-3 col-xl-11 form-emergente">
   <br>
   <div class="row">
     <div class="col d-flex justify-content-between align-items-center">
@@ -42,7 +42,7 @@
 
     <br>
 
-      <mat-card *ngIf="listaCuotas.length > 0">
+      <mat-card class="mat-card" *ngIf="listaCuotas.length > 0">
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
